_notes/Numerical_Analysis/reports/SecondOrder_methods.log
Traceback (most recent call last):
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\hatef\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
alph in [1/2, 1, 2/3]:
    Table = ExplicitMidpointMethod(f = f, y0 = y0, a = a, b = b, N = 10).rename(columns = {'y':'y (Explicit)'})
    Table['Exact'] = y_exact(Table['t'])
    Table['Error (Explicit)'] =  np.abs(Table['Exact'] - Table['y (Explicit)'])
    Table['Error (Explicit)'] =  np.abs(Table['Exact'] - Table['y (Explicit)'])

    Temp = ImplicitMidpointMethod(f = f, y0 = y0, a = a, b = b, N = 10).rename(columns = {'y':'y (Implicit)'})
    Temp['Exact'] = y_exact(Table['t'])
    Temp['Error (Implicit)'] =  np.abs(Temp['Exact'] - Temp['y (Implicit)'])
    Temp['Error (Implicit)'] =  np.abs(Temp['Exact'] - Temp['y (Implicit)'])
    Table = Table.merge(Temp, on = ['t', 'Exact'])
    display(Table[1:].style.set_properties(subset=['Error (Explicit)', 'Error (Implicit)'],
                                           **{'background-color': 'Lavender', 'color': 'Navy',
                                              'border-color': 'DarkGreen'})\
            .format({'Error (Explicit)': "{:.4e}", 'Error (Implicit)': "{:.4e}"}))
------------------

[1;36m  Input [1;32mIn [19][1;36m[0m
[1;33m    alph in [1/2, 1, 2/3]:[0m
[1;37m                          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (280010635.py, line 1)

